Propagate window positions down OOPIF chains

A regression from earlier this year affected visual state updates when
they are being propagated to OOPIFs, such that they don't immediately
also propagate to nested OOPIFs underneath a direct child frame. This
was causing temporary mispositioning of things like popup menus.

This CL corrects the flaw.

It also fixes a bug in a test helper class, ShowWidgetMessageFilter,
which incorrectly discards information from messages that were called
before Wait() was called.

Bug: 878703, 873337
Change-Id: I61f42eba4f6b7ab41d96a1db479bceb64ef00954
Reviewed-on: https://chromium-review.googlesource.com/1225090
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Commit-Queue: Ken Buchanan <kenrb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591134}
Former-commit-id: ee24be2aa0c578cf371f64dea1b887635959c833