content/test/content_browser_test_utils_internal.h
@@ -247,7 +247,7 @@ class ShowWidgetMessageFilter : public content::BrowserMessageFilter {
 
   scoped_refptr<content::MessageLoopRunner> message_loop_runner_;
   gfx::Rect initial_rect_;
-  int routing_id_;
+  int routing_id_ = MSG_ROUTING_NONE;
 
   DISALLOW_COPY_AND_ASSIGN(ShowWidgetMessageFilter);
 };
